Lachlan commands are working

--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,12 @@ html {
   box-sizing: border-box;
 }
 
-.rootContainer {
-  display: flex;
-  flex-direction: column;
-
-  justify-content: center;
-  background-color: pink;
-  height: 100vh;
-  padding: 20px;
+label {
+  font-weight: bold;
 }
 
-#jsonOutput {
-  flex: 1;
-  width: 100%;
-  resize: none;
+.rootContainer {
+  background-color: pink;
+  height: 100vh;
+  padding: 10px;
 }
