ACT commands are working

--- a/src/Designer/components/Settings.module.css
+++ b/src/Designer/components/Settings.module.css
@@ -11,6 +11,7 @@
   -moz-box-shadow: 12px 10px 28px -4px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 12px 10px 28px -4px rgba(0, 0, 0, 0.75);
   box-shadow: 12px 10px 28px -4px rgba(0, 0, 0, 0.75);
+  z-index: 2;
 }
 
 select {
