--- a/src/Designer/components/Home.module.css
+++ b/src/Designer/components/Home.module.css
@@ -5,11 +5,10 @@
 }
 
 .main {
-  display: flex;
-  flex: 1 1 auto;
-  column-gap: 10px;
+  flex: 1;
 }
 
 .cytoContainer {
-  flex-grow: 1;
+  flex: 1;
+  height: 100%;
 }
