--- a/src/Designer/components/CommandInput.module.css
+++ b/src/Designer/components/CommandInput.module.css
@@ -6,10 +6,15 @@
 .header {
   display: flex;
   align-items: center;
+  margin: 5px 0px;
 }
 
 input {
   border-width: 1px;
   border-radius: 5px;
   padding: 5px;
+}
+
+.loadCommandsBtn {
+  margin-left: 5px;
 }
